force-app/main/default/objects/Player_Challenge__c/Player_Challenge__c.object-meta.xml
<CustomObject>
    <label>Player Challenge</label>
    <nameField>
        <displayFormat>PC-{0}</displayFormat>
        <label>Player Challenge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Player Challenges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>