force-app/main/default/objects/Player_Challenge__c/fields/Challenged_User__c.field-meta.xml
<CustomField>
    <fullName>Challenged_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Challenged User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Player_Challenges</relationshipName>
    <type>Lookup</type>
</CustomField>