force-app/main/default/objects/Player_Challenge__c/fields/Challenged_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Challenged_User_Name__c</fullName>
    <formula>Challenged_User__r.FirstName + &#39; &#39; + Challenged_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Challenged User Name</label>
    <type>Text</type>
</CustomField>