force-app/main/default/objects/Player_Challenge__c/fields/Challenging_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Challenging_User_Name__c</fullName>
    <formula>CreatedBy.FirstName + &#39; &#39; +  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Challenging User Name</label>
    <type>Text</type>
</CustomField>