force-app/main/default/objects/Player_Challenge__c/fields/Game_Type__c.field-meta.xml
<CustomField>
    <fullName>Game_Type__c</fullName>
    <label>Game Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>